style.css
:root {
  --primary-color: #e0be9a;
  --secondary-color: #5b4d43;
  --tertiary-color: #fff8f1;

  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
  --font-family: "Poppins", sans-serif;
}

body {
  background-color: #fff8f1;
}

h1,
h2,
h3 {
  margin: 0;
  padding: 30px 20px;
  text-align: center;
  font-family: var(--font-family);
}

/* footer .email-link {
  text-decoration: none;
  padding: 50px;
  color: var(--secondary-color);
  font-size: 24px;
  font-weight: 600;
} */

/* footer .email-link:hover {
  color: var(--secondary-color);
} */

footer .social-links a {
  margin: 0 20px;
  padding: 10px 14px;
  font-size: 18px;
  border-radius: 50%;
  background-color: var(--primary-color);
  color: var(--secondary-color);
  transition: all 150ms ease-in-out;
}

footer .social-links a:hover {
  color: white;
  background-color: var(--secondary-color);
}
/* 
footer .contact-box {
  background-color: rgb(234, 219, 204);
  margin: 30px;
  padding: 30px 80px;
  border-radius: 10px;
}

footer .contact-box p {
  margin: 0;
} */

.project-img {
  border-radius: 10px;
  transition: all 150ms ease-in-out;
}
.project-img:hover {
  filter: contrast(80%);
  transform: scale(1.1);
}

/* Hero */

.hero {
  padding: 160px 20px;
  background-color: rgb(234, 219, 204);
}

.hero h1 {
  font-size: 96px;
}
.hero h2 {
  font-weight: normal;
  line-height: 1.5;
  font-size: 48px;
  padding: 15px;
}
/* Buttons */
.navigation-links {
  display: flex;
  margin-top: 40px;
  justify-content: center;
}

.navigation-links a {
  margin: 20px;
}

.primary-link {
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  background: var(--primary-color);
  border: 1px solid var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;
  font-size: 24px;
}

.secondary-link {
  border-radius: 4px;
  padding: 20px 20px;
  text-decoration: none;
  background: var(--secondary-color);
  border: 1px solid var(--secondary-color);
  box-shadow: var(--box-shadow);
  color: white;
  font-size: 24px;
}
.primary-link:hover {
  color: white;
  background-color: var(--secondary-color);
  border: 1px solid var(--secondary-color);
  transition: all 150ms ease-in-out;
}
.secondary-link:hover {
  color: black;
  background-color: var(--primary-color);
  border: 1px solid var(--primary-color);
  transition: all 150ms ease-in-out;
}

/* About, Portfolio, & Services Content*/

.content-container {
  padding: 50px 20px;
}
.content {
  margin: 30px;
}
.content h1 {
  font-size: 64px;
}

.content h2 {
  font-size: 24px;
}

.content h3 {
  font-size: 20px;
  font-weight: 900;
}

.content p {
  font-size: 16px;
  opacity: 0.7;
}

/* Custom colors */

.bg-custom {
  background-color: var(--primary-color);
}

.bg-custom-light {
  background-color: #eadbcc;
}

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

/* Media queries */

@media (max-width: 800px) {
  .content h1 {
    font-size: 48px;
  }
  .content h2 {
    font-size: 24px;
  }
  .content h3 {
    font-size: 18px;
  }
  .content p {
    font-size: 14px;
  }

  .hero {
    padding: 80px 20px;
  }

  .hero h1 {
    font-size: 48px;
  }

  .hero h2 {
    font-size: 36px;
  }

  .tertiary-link,
  .secondary-link,
  .primary-link {
    font-size: 16px;
  }
}

